--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@
     --color-table: #214c8d;
     --color-text: #000;
     --color-text-secondary: #767676;
+
+    --mono-font-family: 'Courier New', Courier, monospace;
 }
 
 /* General Elements */
@@ -64,6 +66,7 @@ table tr td:first-child {
 
 #blog-post-table tbody tr td:nth-child(2) {
     text-align: right;
+    font-family: var(--mono-font-family);
 }
 
 /* Classes */
