--- a/css/styles.css
+++ b/css/styles.css
@@ -97,8 +97,8 @@ table tr td:first-child {
 }
 
 .galleryImage {
-    width: 100% !important;
-    height: auto !important;
+    width: 100%;
+    height: auto;
 }
 
 @media screen and (max-width: 900px) {
