--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,21 @@ input[type="submit"] {
   padding: 0.5rem;
 }
 
+abbr[title] {
+  text-decoration: none;
+  cursor: auto;
+}
+
 abbr[title]:after {
   content: " (" attr(title) ") ";
 }
 
 @media screen and (min-width: 750px) {
+  abbr[title] {
+    text-decoration: underline dotted;
+    cursor: help;
+  }
+
   abbr[title]:after {
     content: "";
   }
