--- a/css/styles.css
+++ b/css/styles.css
@@ -151,3 +151,36 @@ abbr[title]:after {
 .certification-date {
   color: #767676;
 }
+
+.typewriter {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.typewriter h1 {
+  overflow: hidden;
+  border-right: 0.3rem solid black;
+  padding-right: 0.3rem;
+  white-space: nowrap;
+  margin: 1.34rem auto;
+  animation: typing 2s steps(30, end), blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
+}
