Finalized design of typewriter (for now ;D )

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,35 +156,37 @@ ol {
   color: #767676;
 }
 
-.typewriter {
-  width: fit-content;
-  margin: 0 auto;
-}
-
-.typewriter h1 {
-  overflow: hidden;
-  white-space: nowrap;
-  border-right: 0.3rem solid black;
-  padding-right: 0.3rem;
-  margin: 1.34rem auto;
-  animation: typing 1.2s steps(20, end), blink-caret 0.75s step-end infinite;
-}
-
-@keyframes typing {
-  from {
-    width: 0;
+@media screen and (min-width: 600px) {
+  .typewriter {
+    width: fit-content;
+    margin: 0 auto;
   }
-  to {
-    width: 100%;
-  }
-}
 
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
+  .typewriter h1 {
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 0.3rem solid black;
+    padding-right: 0.3rem;
+    margin: 1.34rem auto;
+    animation: typing 2s steps(30, end), blink-caret 0.75s step-end infinite;
   }
-  50% {
-    border-color: black;
+
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+    to {
+      width: 100%;
+    }
+  }
+
+  @keyframes blink-caret {
+    from,
+    to {
+      border-color: transparent;
+    }
+    50% {
+      border-color: black;
+    }
   }
 }
