Cleaned up IIFE-wrapped IIFE

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ nav {
 
 table {
   /* Top, Left/Right, Bottom */
-  margin: 1rem 0.5rem 0rem;
+  margin: 1rem 0.5rem;
   height: fit-content;
 }
 
