Added css class and professional experience

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,11 +133,15 @@ ol {
 }
 
 .lockheed-martin {
-  color: #008000;
+  color: #006800;
 }
 
 .family-medical-leave {
   color: #800000;
+}
+
+.soma-notes {
+  color: #4834b3;
 }
 
 .another-professional-experience {
