--- a/projects/saas-login-page/styles.css
+++ b/projects/saas-login-page/styles.css
@@ -1,5 +1,14 @@
-#placeholder {
-  height: 10rem;
-  aspect-ratio: 1;
-  background-color: red;
+#card {
+  height: 100%;
+  max-height: 800px;
+  min-width: 300px;
+  width: 50%;
+  max-width: 650px;
+  background-image: linear-gradient(45deg, rgba(0, 0, 255, 0.5), rgba(128, 0, 128, 0.5));
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
 }
