--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ a[target="_blank"]::after {
   width: 100%;
   text-align: center;
   padding: 1rem 0;
-  background-color: yellow;
+  background-color: #ffff00;
   font-size: 2rem;
   font-weight: bold;
 }
@@ -170,7 +170,7 @@ a[target="_blank"]::after {
   .typewriter h1 {
     overflow: hidden;
     white-space: nowrap;
-    border-right: 0.3rem solid black;
+    border-right: 0.3rem solid #000000;
     padding-right: 0.3rem;
     margin: 1.34rem auto;
     animation: typing 2s steps(30, end), blink-caret 0.75s step-end infinite;
@@ -191,7 +191,7 @@ a[target="_blank"]::after {
       border-color: transparent;
     }
     50% {
-      border-color: black;
+      border-color: #000000;
     }
   }
 }
