--- a/css/mvp.css
+++ b/css/mvp.css
@@ -1,4 +1,4 @@
-/* MVP.css v1.14 - https://github.com/andybrewer/mvp */
+/* MVP.css v1.16 - https://github.com/andybrewer/mvp */
 
 :root {
   --active-brightness: 0.85;
@@ -14,6 +14,7 @@
   --color-table: #118bee;
   --color-text: #000;
   --color-text-secondary: #999;
+  --color-scrollbar: #cacae8;
   --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
     sans-serif;
   --hover-brightness: 1.2;
@@ -284,12 +285,12 @@ a {
   text-decoration: underline;
 }
 
-a:active {
-  filter: brightness(var(--active-brightness));
-}
-
 a:hover {
   filter: brightness(var(--hover-brightness));
+}
+
+a:active {
+  filter: brightness(var(--active-brightness));
 }
 
 a b,
@@ -312,15 +313,15 @@ input[type="submit"] {
   font-family: var(--font-family);
 }
 
-button:active,
-input[type="submit"]:active {
-  filter: brightness(var(--active-brightness));
-}
-
 button:hover,
 input[type="submit"]:hover {
   cursor: pointer;
   filter: brightness(var(--hover-brightness));
+}
+
+button:active,
+input[type="submit"]:active {
+  filter: brightness(var(--active-brightness));
 }
 
 a b,
@@ -425,6 +426,7 @@ textarea {
 }
 
 input[type="text"],
+input[type="password"],
 textarea {
   width: calc(100% - 1.6rem);
 }
@@ -441,15 +443,53 @@ label {
 
 /* Popups */
 dialog {
+  max-width: 90%;
+  max-height: 85dvh;
+  margin: auto;
+  padding: 0;
   border: 1px solid var(--color-bg-secondary);
-  border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow) var(--color-shadow);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50%;
-  z-index: 999;
+  border-radius: 0.5rem;
+  overscroll-behavior: contain;
+  scroll-behavior: smooth;
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+  scrollbar-color: transparent transparent;
+  animation: bottom-to-top 0.25s ease-in-out forwards;
+}
+
+dialog::-webkit-scrollbar {
+  width: 0;
+  display: none;
+}
+
+dialog::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+dialog::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+@media (min-width: 650px) {
+  dialog {
+    max-width: 39rem;
+  }
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+@keyframes bottom-to-top {
+  0% {
+    opacity: 0;
+    transform: translateY(10%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Tables */
@@ -480,11 +520,11 @@ table thead {
   padding: 0;
 }
 
-table thead th:first-child {
+table thead tr:first-child th:first-child {
   border-top-left-radius: var(--border-radius);
 }
 
-table thead th:last-child {
+table thead tr:first-child th:last-child {
   border-top-right-radius: var(--border-radius);
 }
 
@@ -519,7 +559,7 @@ blockquote footer {
 /* Scrollbars */
 * {
   scrollbar-width: thin;
-  scrollbar-color: rgb(202, 202, 232) auto;
+  scrollbar-color: var(--color-scrollbar) transparent;
 }
 
 *::-webkit-scrollbar {
@@ -532,6 +572,6 @@ blockquote footer {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: rgb(202, 202, 232);
+  background-color: var(--color-scrollbar);
   border-radius: 10px;
 }
