--- a/css/mvp.css
+++ b/css/mvp.css
@@ -1,4 +1,4 @@
-/* MVP.css v1.16 - https://github.com/andybrewer/mvp */
+/* MVP.css v1.17.1 - https://github.com/andybrewer/mvp */
 
 :root {
   --active-brightness: 0.85;
@@ -200,6 +200,24 @@ nav ul li ul::before {
 nav ul li ul li,
 nav ul li ul li a {
   display: block;
+}
+
+/* Nav for Mobile */
+@media (max-width: 768px) {
+  nav {
+    flex-wrap: wrap;
+  }
+
+  nav ul li {
+    width: calc(100% - 1em);
+  }
+
+  nav ul li ul {
+    border: none;
+    box-shadow: none;
+    display: block;
+    position: static;
+  }
 }
 
 /* Typography */
@@ -427,6 +445,7 @@ textarea {
 
 input[type="text"],
 input[type="password"],
+input[type="email"],
 textarea {
   width: calc(100% - 1.6rem);
 }
@@ -446,7 +465,8 @@ dialog {
   max-width: 90%;
   max-height: 85dvh;
   margin: auto;
-  padding: 0;
+  padding-block: 0;
+  padding-inline: 20px;
   border: 1px solid var(--color-bg-secondary);
   border-radius: 0.5rem;
   overscroll-behavior: contain;
@@ -490,6 +510,10 @@ dialog::backdrop {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+dialog hr {
+  margin-block: 1rem;
 }
 
 /* Tables */
